apps/hermes-agent/dashboard/overlays/nishir-tailnet/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: automata-dashboard
  annotations:
    tailscale.com/tags: tag:web
spec:
  defaultBackend:
    service:
      name: hermes-agent-dashboard
      port:
        name: http
  ingressClassName: tailscale
  tls:
    - hosts:
        - automata-dashboard
